[gd_scene load_steps=5 format=2]

[ext_resource path="res://StatsBox.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.231373, 0.333333, 0.615686, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.168627, 0.239216, 0.447059, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.137255, 0.603922, 0.219608, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.156863, 0.196078, 0.141176, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.447059, 0.156863, 0.156863, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.243137, 0.160784, 0.160784, 1 )

[node name="StatsBox" type="Control"]
margin_right = 237.0
margin_bottom = 200.0
rect_scale = Vector2( 0.996578, 1.0083 )
script = ExtResource( 1 )

[node name="StatsBoxContainer" type="MarginContainer" parent="."]
margin_right = 237.0
margin_bottom = 200.0

[node name="Color" type="Panel" parent="StatsBoxContainer"]
margin_right = 237.0
margin_bottom = 200.0
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="StatsBoxContainer"]
margin_right = 237.0
margin_bottom = 200.0
custom_constants/margin_right = 18
custom_constants/margin_top = 10
custom_constants/margin_left = 18
custom_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="StatsBoxContainer/MarginContainer"]
margin_left = 18.0
margin_top = 10.0
margin_right = 219.0
margin_bottom = 200.0
custom_constants/separation = 38
alignment = 1

[node name="EnergyBar" type="ProgressBar" parent="StatsBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 201.0
margin_bottom = 48.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 5.0
value = 100.0

[node name="Label" type="Label" parent="StatsBoxContainer/MarginContainer/VBoxContainer/EnergyBar"]
margin_left = 1.0
margin_top = -19.0
margin_right = 202.0
margin_bottom = -5.0
text = "Energy"
valign = 2

[node name="StressBar" type="ProgressBar" parent="StatsBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 201.0
margin_bottom = 104.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 5.0

[node name="Label" type="Label" parent="StatsBoxContainer/MarginContainer/VBoxContainer/StressBar"]
margin_left = 1.0
margin_top = -19.0
margin_right = 202.0
margin_bottom = -5.0
text = "Stress"
valign = 2

[node name="HappinessBar" type="ProgressBar" parent="StatsBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 201.0
margin_bottom = 160.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 5.0
value = 100.0

[node name="Label" type="Label" parent="StatsBoxContainer/MarginContainer/VBoxContainer/HappinessBar"]
margin_left = 1.0
margin_top = -19.0
margin_right = 202.0
margin_bottom = -5.0
text = "Happiness"
valign = 2
